Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5397

Printing QTextDocuments containing custom objects using QTextDocument::print() does not print the object

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.6.1
    • 4.5.3
    • GUI: Text handling
    • None
    • 06baf7f173b0331a5192616b8ecf9611130f278b

      When printing a QTextDocument which contains custom objects derived from QTextObjectInterface using QTextDocument::print(), the custom objects do not show up. Their intrinsicSize() method is called, but drawObject() is not. However, when drawing the document with QTextDocument::documentLayout()->draw(), then the custom objects are drawn.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            rodal Samuel Rødal
            sanonymous Nokia Qt Support (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes