Printing QTextDocument doesn't include custom objects.

We need to copy the abstract text layout's custom object handlers as
well when we temporarily use a different QTextDocument.

Task-number: QTBUG-5397
Reviewed-by: Simon Hausmann